# cxxplug

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Coverage.cmake  ProjectVersion.cmake  TestFunction.cmake
cmake/function/: add_plugin_test.cmake
examples/: CMakeLists.txt  main.cxx  plugin.cxx  plugin.hxx  plugin_impl.cxx  plugin_impl.hxx
include/cxxplug/: cxxplug.hxx  factory.hxx  macro.hxx  plugin.hxx  utils.hxx  version.hxx
src/: plugin.cxx  utils.cxx
src/version/: .gitignore  version.cxx.in  version.hxx
tests/: CMakeLists.txt  README.tests.md  test_cxxplug.cxx  test_plugin.cxx  test_utils.cxx
tests/plugin/: CMakeLists.txt  plugin.cxx  plugin_impl.hxx
